--- a/index.html
+++ b/index.html
@@ -34,8 +34,226 @@
       }
       $( document ).ready(function() {
         // Handler for .ready() called.
-      });      
+      });
+
+      function validation()
+      {
+      	var name 			= $.trim($('#name').val());
+      	var child_name 		= $.trim($('#child_name').val());
+      	var years 			= $.trim($('#years').val());
+      	var months 			= $.trim($('#months').val());
+      	var days 			= $.trim($('#days').val());
+      	var branch_office 	= $.trim($('#branch_office').val());
+      	var start_time 		= $.trim($('#start_time').val());
+      	var end_time 		= $.trim($('#end_time').val());
+      	var email 			= $.trim($('#email').val());
+      	var phone 			= $.trim($('#phone').val());
+      	var refer_to 		= $.trim($('#refer_to').val());
+      	var check = true;
+
+      	if(name == '')
+      	{
+      		$('#name').focus();
+      		$('#name').addClass('has-error');
+      		check = false;
+      	}
+      	if(child_name == '')
+      	{
+      		$('#child_name').focus();
+      		$('#child_name').addClass('has-error');
+      		check = false;
+      	}
+      	if(years == '')
+      	{
+      		$('#years').focus();
+      		$('#years').addClass('has-error');
+      		check = false;
+      	}
+      	if(months == '')
+      	{
+      		$('#months').focus();
+      		$('#months').addClass('has-error');
+      		check = false;
+      	}
+      	if(days == '')
+      	{
+      		$('#days').focus();
+      		$('#days').addClass('has-error');
+      		check = false;
+      	}
+      	if(branch_office == '')
+      	{
+      		$('#branch_office').focus();
+      		$('#branch_office').addClass('has-error');
+      		check = false;
+      	}
+      	if(start_time == '')
+      	{
+      		$('#start_time').focus();
+      		$('#start_time').addClass('has-error');
+      		check = false;
+      	}
+      	if(end_time == '')
+      	{
+      		$('#end_time').focus();
+      		$('#end_time').addClass('has-error');
+      		check = false;
+      	}
+      	if(email == '')
+      	{
+      		$('#email').focus();
+      		$('#email').addClass('has-error');
+      		check = false;
+      	}
+      	if(phone == '')
+      	{
+      		$('#phone').focus();
+      		$('#phone').addClass('has-error');
+      		check = false;
+      	}
+      	if(refer_to == '')
+      	{
+      		$('#refer_to').focus();
+      		$('#refer_to').addClass('has-error');
+      		check = false;
+      	}
+      	
+      }  
     </script>
+
+<script>
+  // // This is called with the results from from FB.getLoginStatus().
+  // function statusChangeCallback(response) {
+  //   console.log('statusChangeCallback');
+  //   console.log(response);
+  //   // The response object is returned with a status field that lets the
+  //   // app know the current login status of the person.
+  //   // Full docs on the response object can be found in the documentation
+  //   // for FB.getLoginStatus().
+  //   if (response.status === 'connected') {
+  //     // Logged into your app and Facebook.
+  //     testAPI();
+  //   } else if (response.status === 'not_authorized') {
+  //     // The person is logged into Facebook, but not your app.
+  //     document.getElementById('status').innerHTML = 'Please log ' +
+  //       'into this app.';
+  //   } else {
+  //     // The person is not logged into Facebook, so we're not sure if
+  //     // they are logged into this app or not.
+  //     document.getElementById('status').innerHTML = 'Please log ' +
+  //       'into Facebook.';
+  //   }
+  // }
+
+  // // This function is called when someone finishes with the Login
+  // // Button.  See the onlogin handler attached to it in the sample
+  // // code below.
+  // function checkLoginState() {
+  //   FB.getLoginStatus(function(response) {
+  //     statusChangeCallback(response);
+  //   });
+  // }
+
+  // window.fbAsyncInit = function() {
+  // FB.init({
+  //   appId      : '793643427414904',
+  //   cookie     : true,  // enable cookies to allow the server to access 
+  //                       // the session
+  //   xfbml      : true,  // parse social plugins on this page
+  //   version    : 'v2.2' // use version 2.2
+  // });
+
+  // // Now that we've initialized the JavaScript SDK, we call 
+  // // FB.getLoginStatus().  This function gets the state of the
+  // // person visiting this page and can return one of three states to
+  // // the callback you provide.  They can be:
+  // //
+  // // 1. Logged into your app ('connected')
+  // // 2. Logged into Facebook, but not your app ('not_authorized')
+  // // 3. Not logged into Facebook and can't tell if they are logged into
+  // //    your app or not.
+  // //
+  // // These three cases are handled in the callback function.
+
+  // FB.getLoginStatus(function(response) {
+  //   statusChangeCallback(response);
+  // });
+
+  // };
+
+  // // Load the SDK asynchronously
+  // (function(d, s, id) {
+  //   var js, fjs = d.getElementsByTagName(s)[0];
+  //   if (d.getElementById(id)) return;
+  //   js = d.createElement(s); js.id = id;
+  //   js.src = document.location.protocol +"//connect.facebook.net/en_US/sdk.js";
+  //   fjs.parentNode.insertBefore(js, fjs);
+  // }(document, 'script', 'facebook-jssdk'));
+
+  // // Here we run a very simple test of the Graph API after login is
+  // // successful.  See statusChangeCallback() for when this call is made.
+  // function testAPI() {
+  //   console.log('Welcome!  Fetching your information.... ');
+  //   FB.api('/me', function(response) {
+  //     console.log('Successful login for: ' + response.name);
+  //     document.getElementById('status').innerHTML =
+  //       'Thanks for logging in, ' + response.name + '!';
+  //   });
+  // }
+
+
+  function getUserData() {
+	FB.api('/me', function(response) {
+		document.getElementById('response').innerHTML = 'Hello ' + response.name;
+	});
+}
+ 
+window.fbAsyncInit = function() {
+	//SDK loaded, initialize it
+	FB.init({
+		appId      : '793643427414904',
+		xfbml      : true,
+		version    : 'v2.2'
+	});
+ 
+	//check user session and refresh it
+	FB.getLoginStatus(function(response) {
+		if (response.status === 'connected') {
+			//user is authorized
+			document.getElementById('loginBtn').style.display = 'none';
+			getUserData();
+		} else {
+			//user is not authorized
+		}
+	});
+};
+ 
+//load the JavaScript SDK
+(function(d, s, id){
+	var js, fjs = d.getElementsByTagName(s)[0];
+	if (d.getElementById(id)) {return;}
+	js = d.createElement(s); js.id = id;
+	js.src = document.location.protocol +"//connect.facebook.net/en_US/sdk.js";
+	fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+ 
+//add event listener to login button
+function checkLoginState(){
+	//do the login
+	FB.login(function(response) {
+		if (response.authResponse) {
+			//user just authorized your app
+			document.getElementById('loginBtn').style.display = 'none';
+			getUserData();
+		}
+	}, {scope: 'email,public_profile', return_scopes: true});
+}
+ 
+</script>
+
+
+
+
   </head>
   <body style="background-color:#EEFBFF;">
 
@@ -53,9 +271,13 @@
 
           </label>
           <div class="col-sm-4">
-          <a class="btn btn-primary" href="#"><i class="fa fa-facebook"></i> Fill information using Facebook</a>
+          <a class="btn btn-primary" onclick="checkLoginState();"><i class="fa fa-facebook"></i> Fill information using Facebook</a>
           </div>
+                    <div id="response"></div>
+
         </div>
+          <div id="status"></div>
+
 
 
 				<div class="form-group">
@@ -64,7 +286,7 @@
 						Name
 					</label>
 					<div class="col-sm-4">
-						<input type="text" class="form-control" id="name">
+						<input type="text" class="form-control" id="name" required>
 					</div>
 				</div>
 
@@ -74,7 +296,7 @@
 						Name your child
 					</label>
 					<div class="col-sm-4">
-						<input type="text" class="form-control" id="child_name">
+						<input type="text" class="form-control" id="child_name" required>
 					</div>
 				</div>
 
@@ -240,7 +462,7 @@
 						Email
 					</label>
 					<div class="col-sm-4">
-						<input type="email" class="form-control" id="email">
+						<input type="email" class="form-control" id="email" required>
 					</div>
 				</div>
 				<div class="form-group">
@@ -249,7 +471,7 @@
 						Phone
 					</label>
 					<div class="col-sm-4">
-						<input type="text" class="form-control" id="phone">
+						<input type="text" class="form-control" id="phone" required>
 					</div>
 				</div>
 
@@ -332,7 +554,7 @@
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
 						 
-						<button type="submit" class="btn btn-primary">
+						<button type="submit" class="btn btn-primary" onclick="validation();">
 							Download Brochure
 						</button>
 					</div>
