--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 3, from LayoutIt!</title>
+    <title>Babystar</title>
 
     <meta name="description" content="Source code generated using layoutit.com">
     <meta name="author" content="LayoutIt!">
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/bootstrap-select.min.css" rel="stylesheet">
-    <link href="css/font-awesome.css" rel="stylesheet">
-    <link href="css/build.css" rel="stylesheet">
+    <link href="asset/css/bootstrap.min.css" rel="stylesheet">
+    <link href="asset/css/style.css" rel="stylesheet">
+    <link href="asset/css/bootstrap-select.min.css" rel="stylesheet">
+    <link href="asset/css/font-awesome.css" rel="stylesheet">
+    <link href="asset/css/build.css" rel="stylesheet">
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-    <script src="js/bootstrap-select.js"></script>
+    <script src="asset/js/jquery.min.js"></script>
+    <script src="asset/js/bootstrap.min.js"></script>
+    <script src="asset/js/scripts.js"></script>
+    <script src="asset/js/bootstrap-select.js"></script>
     <script type="text/javascript">
       function changeReferBy(curValue)
       {
@@ -187,7 +187,7 @@ function checkLoginState(){
 		<div class="col-md-8 center_div">
 			<form class="form-horizontal" role="form">
         <div class="form-group">
-          <img src="images/logo.gif" class="form_logo"> 
+          <img src="asset/images/logo.gif" class="form_logo"> 
         </div>
 
         <div class="form-group">
