--- a/admin/mail.html
+++ b/admin/mail.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf8" />
 <title>Guarderias-BabyStar -&iquest;Necesitas M&aacute;s Informaci&oacute;n?</title>
 <style type="text/css">
-<!--
+/*
 .style2 {
 	font-size: 12px;
 	font-family: arial;
 }
--->
+*/
 </style>
 </head>
 
@@ -33,5 +33,47 @@
 <map name="Map" id="Map"><area shape="rect" coords="228,70,287,90" href="http://www.guarderias-babystar.com" target="_blank" />
 </map>
 <map name="Map2" id="Map2"><area shape="rect" coords="581,9,710,63" href="http://www.guarderias-babystar.com/folleto.pdf" target="_blank" />
-</map></body>
+</map>
+<br>
+
+Hola,<br>
+Hace unos días recibimos tus datos y nos gustaría conocerte y platicarte personalmente los cuidados <br>
+que podemos ofrecerte para tu hijo(a).<br><br>
+
+Te recordamos que contamos con:<br><br>
+
+Guardería de 7am a 19hrs<br>
+Guardería Express<br>
+Personal Capacitado<br><br>
+
+Estimulación temprana<br>
+
+Monitoreo por Internet, además un completo programa de seguridad.<br><br>
+
+Alimentación Balanceada, atendemos necesidades de leche materna y formulas, dietas especiales, alergias<br>
+Cantos y Juegos<br>
+Yoga y Zumba Infantil<br>
+Inglés, Educación Ambiental, Portal para padres en Facebook y mucho más.<br><br>
+
+Además contamos con planes de pago mensual y quincenal.<br>
+Si deseas realizar una cita, responde este correo con el día y la hora en que<br><br>
+
+te esperamos o llámanos a:<br><br><br>
+
+ 
+
+Sucursal San Jerónimo: 6267-6606<br><br>
+
+Sucursal Escandón: 5516-2223<br><br>
+
+Sucursal San Ángel: 6718-6083<br>
+Puedes visitar nuestra página en www.babystar.com.mx<br><br><br>
+
+
+¡Gracias!<br><br>
+
+Atentamente,<br>
+Celmira González<br>
+</body>
 </html>
+
